@@ -40,7 +40,8 @@
                                            initialHighlight: queryParams.highlight,
                                            show_nav: queryParams.nav,
                                            show_tracklist: queryParams.tracklist,
-                                           show_overview: queryParams.overview
+                                           show_overview: queryParams.overview,
+                                           updateBrowserURL: true
                                        });
         });
     </script>
